ingress/multi-cluster/mci-asm-https-e2e/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo
  namespace: asm-ingress
spec:
  replicas: 2
  selector:
    matchLabels:
      app: foo
  template:
    metadata:
      labels:
        app: foo
        version: v1
    spec:
      containers:
      - name: whereami
        image: gcr.io/google-samples/whereami:v1.2.10
        ports:
          - name: http
            containerPort: 8080
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
---
apiVersion: v1
kind: Service
metadata:
  name: foo
  namespace: asm-ingress
spec:
  type: ClusterIP
  selector:
    app: foo
    version: v1
  ports:
  - name: http
    port: 80
    targetPort: 8080
